# impral

./: Cargo.toml  LICENSE  README.md  justfile
src/: lexer.rs  lib.rs  nanval.rs  parser.rs  values.rs
src/guide/: _index.md  commands.md  expressions.md  literals.md  members.md  pipes.md  references.md
src/lexer/: groupenizer.rs  input.rs  literal.rs  symbol.rs  tests.rs  token.rs  tokenizer.rs
src/parser/: ast.rs  command.rs  error.rs  expression.rs  helpers.rs  structure.rs  tests.rs
src/parser/ast/: fmt_debug.rs  fmt_html.rs  head.html
src/parser/tests/: constants.ifn  dicts.ifn  examples.ifn  field.ifn  ifs.ifn  index.ifn  infix.ifn  lists.ifn  numars.ifn  numbers.ifn  obj-refs.ifn  operators.ifn  params.ifn  pipes.ifn  range.ifn  refs.ifn  strings.ifn  try.ifn
