[package]
name = "impral"
version = "0.1.4"
license = "MIT OR Apache-2.0"
authors = ["Longor1996 <lalongok@gmail.com>"]
edition = "2021"

description = "A command parsing and evaluation library for a LISP dialect, specialized for commandline input."
keywords = ["script", "scripting", "language", "lisp"]

readme = "README.md"
homepage = "https://github.com/Longor1996/impral"
repository = "https://github.com/Longor1996/impral"

[dependencies]
peekmore = "1.0.0"
smallvec = "1.6.1"
smartstring = "1.0.1"
rustc-hash = "1.1.0"
thiserror = "1.0.26"
strum = "0.24.0"
strum_macros = "0.24.0"
nanval = "0.1.1"

[dependencies.tagged-box]
version = "0.1.1"
default-features = false
features = ["57bits"]
