[package]
name = "impral"
version = "0.1.6"
license = "MIT OR Apache-2.0"
authors = ["Longor1996 <lalongok@gmail.com>"]
edition = "2021"
resolver = "2"

description = "A command parsing and evaluation library for a LISP dialect, specialized for commandline input."
keywords = ["script", "scripting", "language", "lisp", "dsl"]
categories = ["compilers", "command-line-interface"]

readme = "README.md"
homepage = "https://github.com/Longor1996/impral"
repository = "https://github.com/Longor1996/impral"

[dependencies]
peekmore = {version = "1.3"}
smallvec = {version = "1.10", features = ["union", "const_generics", "const_new"]}
smartstring = {version = "1.0"}
thunderdome = {version = "0.6"}
rustc-hash = {version = "1.1"}
thiserror = {version = "1.0"}
strum = {version = "0.25.0"}
strum_macros = {version = "0.25.0"}
uuid = {version = "1.4"}
yansi = {version = "0.5"}

#nanval = "0.2.0"

#[dependencies.tagged-box]
#version = "0.1.1"
#default-features = false
#features = ["57bits"]

[features]
default = ["html_fmt"]

### Should the language guide/documentation be built?
guide = []
html_fmt = []
